--- a/scss/components/_article-intro.scss
+++ b/scss/components/_article-intro.scss
@@ -20,7 +20,7 @@
   background: url(../../images/drawers.jpg) 50% 0 no-repeat;
   background-size: cover;
   @include mq($desktop-width, down) {
-    @include row-start-end(1, 4);
+    @include row-start-end(1, 3);
   }
   @include mq($desktop-width, up) {
     @include column-start-end(1, 3);
@@ -32,7 +32,7 @@
   padding: 2.5rem 2.5rem 1.5rem;
 
   @include mq($desktop-width, down) {
-    @include row-start-end(4, -1);
+    @include row-start-end(3, -1);
   }
   @include mq($desktop-width, up) {
     padding: 2.5rem 3rem 1.5rem 2.5rem;
